Commented out previous page scroll/jump "fix" in tags page js file

--- a/grunt/sass/_variables.scss
+++ b/grunt/sass/_variables.scss
@@ -62,7 +62,6 @@ $article-blockquote-background-color: $white;
 $article-blockquote-border-color: $accent-color;
 $article-blockquote-font-family: $base-font-family;
 $article-codeblock-background:#111111;
-$article-coding-lineno-color:#ffffff;
 $article-header-background-image-size:cover;
 $article-header-background-image-position:center left;
 $article-header-image-min-height-mobile:50vh;
